--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,21 @@
-APP_NAME=Laravel
+APP_NAME="NKN Open API"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:pQ6jOisuu+yx5MUedbQz4tZJQoPzr5MYAsQscdYCLQM=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://nkn-open-api.test
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_PORT=5432
+DB_DATABASE=nkn_open_api
+DB_USERNAME=postgres
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+BROADCAST_DRIVER=pusher
+CACHE_DRIVER=memcached
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -37,10 +37,12 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 
-WS_APP_ID=
-WS_APP_KEY=
-WS_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_ID=978016
+PUSHER_APP_KEY=a2b7c363f4b1e5139e6e
+PUSHER_APP_SECRET=de820e587ce92f09a841
+PUSHER_APP_CLUSTER="mt1"
 
-MIX_WS_APP_KEY="${WS_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+UPDATEINTERVAL = 20
+REMOTENODE_ADDR = 'http://mainnet-seed-0006.nkn.org'
+REMOTENODE_PORT = 30003
