fix: installation and env corrections

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ DB_USERNAME=postgres
 DB_PASSWORD=
 
 BROADCAST_DRIVER=pusher
-CACHE_DRIVER=memcached
+CACHE_DRIVER=redis
 QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -44,5 +44,5 @@ PUSHER_APP_CLUSTER="mt1"
 
 
 UPDATEINTERVAL = 20
-REMOTENODE_ADDR = 'http://mainnet-seed-0006.nkn.org'
+REMOTENODE_ADDR = 'https://mainnet-rpc-node-0001.nkn.org/mainnet/api/wallet'
 REMOTENODE_PORT = 30003
